--- a/composer.json
+++ b/composer.json
@@ -14,16 +14,16 @@
         "sibyx/phpgpx": "^1.2.1"
     },
     "require-dev": {
-        "barryvdh/laravel-debugbar": "dev-master",
+        "barryvdh/laravel-debugbar": "^4.0",
         "brianium/paratest": "^7.8",
         "fakerphp/faker": "^1.24",
         "friendsofphp/php-cs-fixer": "^3.70",
-        "larastan/larastan": "3.x-dev",
+        "larastan/larastan": "^3.9",
         "laravel/pint": "dev-main",
         "mockery/mockery": "^1.6",
-        "nunomaduro/collision": "^8.0",
+        "nunomaduro/collision": "^8.6",
         "nunomaduro/phpinsights": "dev-master",
-        "phpcompatibility/php-compatibility": "dev-develop",
+        "phpcompatibility/php-compatibility": "^9.3",
         "phpunit/phpunit": "^11.0",
         "psalm/plugin-laravel": "dev-master",
         "spatie/laravel-ignition": "dev-main",
